funciona el app.js y mongo

--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -42,8 +42,14 @@
         <div class="row mb-4">
             <div class="col">
                 <div class="form-outline">
+                    <label for="cartID" class="form-label">Cart ID:</label><br>
+                    <input type="text" class="form-control" name="cartID" placeholder="cart....."><br>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-outline">
                     <label for="password" class="form-label">Tu contraseña:</label><br>
-                    <input type="password" class="form-control" name="password" placeholder="Secreta"><br>
+                    <input type="password" class="form-control" name="password" placeholder="secreta"required><br>
                 </div>
             </div>
         </div>
